welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:2: error: not found: value Maths
  if ( Maths.abs(10-a)< Maths.abs(10-b)){
       ^close10:2: error: not found: value Maths
  if ( Maths.abs(10-a)< Maths.abs(10-b)){
                        ^close10:6: error: not found: value Maths
    if (Maths.abs(10-a)> Maths.abs(10-b)){
        ^close10:6: error: not found: value Maths
    if (Maths.abs(10-a)> Maths.abs(10-b)){
                         ^close10:9: error: not found: value Maths
    else (Maths.abs(10-a)= Maths.abs(10-b)){
          ^close10:9: error: not found: value Maths
    else (Maths.abs(10-a)= Maths.abs(10-b)){
                           ^close10:10: error: not found: value Maths
      if (Maths.abs(a)< Maths.abs(b)){
          ^close10:10: error: not found: value Maths
      if (Maths.abs(a)< Maths.abs(b)){
                        ^